--- a/my_lm-evaluation-harness/lm_eval/tasks/mt_bench/mt_bench_step1.yaml
+++ b/my_lm-evaluation-harness/lm_eval/tasks/mt_bench/mt_bench_step1.yaml
@@ -5,7 +5,8 @@ validation_split: null
 test_split: train
 doc_to_text: !function utils.doc_to_text1
 process_results: !function utils.process_results1
+doc_to_target: !function utils.doc_to_target
 metric_list:
-  - metric: accuracy
+  - metric: acc
     aggregation: mean
     higher_is_better: true
