--- a/my_lm-evaluation-harness/lm_eval/tasks/flask/flask.yaml
+++ b/my_lm-evaluation-harness/lm_eval/tasks/flask/flask.yaml
@@ -4,6 +4,7 @@ output_type: generate_until
 validation_split: null
 test_split: train
 doc_to_text: !function utils.doc_to_text
+doc_to_target: !function utils.doc_to_target
 process_results: !function utils.process_results
 metric_list:
   - metric: accuracy
