--- a/my_lm-evaluation-harness/lm_eval/tasks/flask/flask.yaml
+++ b/my_lm-evaluation-harness/lm_eval/tasks/flask/flask.yaml
@@ -7,6 +7,9 @@ doc_to_text: !function utils.doc_to_text
 doc_to_target: !function utils.doc_to_target
 process_results: !function utils.process_results
 metric_list:
-  - metric: accuracy
+  - metric: acc
     aggregation: mean
     higher_is_better: true
+generation_kwargs:
+  until:
+    - "USER:"
