fix exposed secrets

--- a/my_helm/prod_env/credentials.conf
+++ b/my_helm/prod_env/credentials.conf
@@ -1,5 +1,5 @@
 {
-            openaiApiKey: "***REMOVED***",
-            anthropicApiKey : "***REMOVED***",
-            togetherApiKey : "***REMOVED***"
+            openaiApiKey: "sk-***",
+            anthropicApiKey : "sk-***",
+            togetherApiKey : "***"
 }
